# mkdocs-apicall-plugin

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  publish.yaml
hooks/: .pre-commit-hooks.yaml  inject-version.sh
mkdocs_apicall_plugin/: abstract.py  curl.py  javascript.py  main.py  python.py
tests/: test_mkdocs_apicall_plugin.py  test_plugin.py
