[tool.poetry]
name = "mkdocs-apicall-plugin"
version = "0.1.2"
description = "Automatically insert code snippets to run API calls"
authors = ["Alban Siffer <alban@situation.sh>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/asiffer/mkdocs-apicall-plugin"


[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.1"
mkdocs-material = "^8.3.9"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
coverage = "^6.4.2"
mkdocs-markdownextradata-plugin = "^0.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
apicall = 'mkdocs_apicall_plugin.main:APICallPlugin'