[tool.poetry]
name = "mkdocs-apicall-plugin"
version = "0.1.10"
description = "Auto-generate code samples to make API calls"
authors = ["Alban Siffer <alban@situation.sh>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/asiffer/mkdocs-apicall-plugin"

[tool.poetry.dependencies]
python = ">=3.7"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.4"
black = "^23.1.0"
Pygments = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
mkdocs-markdownextradata-plugin = "^0.2.5"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
apicall = 'mkdocs_apicall_plugin.main:APICallPlugin'
